PMforce/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jason Young</fullName>
                </value>
                <value>
                    <fullName>Greg Cutler</fullName>
                </value>
                <value>
                    <fullName>Alan Acton</fullName>
                </value>
                <value>
                    <fullName>Sumanta Mukherjee</fullName>
                </value>
                <value>
                    <fullName>Soumil Chitnis</fullName>
                </value>
                <value>
                    <fullName>Devdatta Kumbhare</fullName>
                </value>
                <value>
                    <fullName>Amol Gaval</fullName>
                </value>
                <value>
                    <fullName>Himanshu Chate</fullName>
                </value>
                <value>
                    <fullName>Kishor Kulkarni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_CR_Efforts_in_hrs_del__c</fullName>
        <inlineHelpText>Total efforts (in hrs) of all timesheets of this CR</inlineHelpText>
        <label>Actual CR Efforts (in hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Project_Efforts__c</fullName>
        <inlineHelpText>Total efforts (in hrs) of all timesheets of this Project</inlineHelpText>
        <label>Actual Project Efforts (in hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocated_Effort_Hours__c</fullName>
        <label>Allocated Effort (Hours)</label>
        <summarizedField>Allocation__c.Allocated_Effort_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Allocation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>FP</value>
        </summaryFilterItems>
        <summaryForeignKey>Allocation__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_CR_efforts__c</fullName>
        <label>Estimated CR efforts (in hrs)</label>
        <summarizedField>Change_Request__c.Efforts_in_hrs__c</summarizedField>
        <summaryForeignKey>Change_Request__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <label>Estimated Project Efforts (Hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources_1__c</fullName>
        <label>Number of Resources 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources_2__c</fullName>
        <label>Number of Resources 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources_3__c</fullName>
        <label>Number of Resources 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>User Training</fullName>
                </value>
                <value>
                    <fullName>Warranty Support</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <displayFormat>P{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_txt__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_1__c</fullName>
        <label>Role 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_2__c</fullName>
        <label>Role 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_3__c</fullName>
        <label>Role 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_No_of_CR__c</fullName>
        <label>Total No of CR</label>
        <summaryForeignKey>Change_Request__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Open_CR__c</fullName>
        <label>Total No of Open CR</label>
        <summaryFilterItems>
            <field>Change_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Not Started, Execution, On Hold</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Request__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_efforts_in_hrs_including_CR__c</fullName>
        <formula>( Actual_CR_Efforts_in_hrs_del__c  +  Actual_Project_Efforts__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total efforts (in hrs) including CR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Active_Projects</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Type__c</columns>
        <columns>Phase__c</columns>
        <columns>Stage__c</columns>
        <columns>Estimated_Effort__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planned_End_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>FP</fullName>
        <active>true</active>
        <label>FP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TM</fullName>
        <active>true</active>
        <label>TM</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>DisplayOwn__c</fullName>
        <label>DisplayOwn</label>
    </sharingReasons>
    <validationRules>
        <fullName>Project_Number_to_be_P0000000</fullName>
        <active>false</active>
        <description>Project number should be in the format Pxxxxxxx</description>
        <errorConditionFormula>NOT(
   REGEX( Name , &quot;P[0-9]{7}&quot;)
 )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Project Number needs to be in the format Pxxxxxxx where x is a number between 0 and 9.</errorMessage>
    </validationRules>
</CustomObject>